# sooth

./: .env.example  .gitignore  BUILD_GUIDE.md  CLAUDE.md  DEMO_SCRIPT.md  EXECUTION_PLAN.md  NOTES_X402.md  PHASE_0_CHECKLIST.md  README.md  SUBMISSION.md  deployments.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/: launch.json
agents/: package.json
agents/src/: base.ts  consumer.ts  jury.ts  llm.ts  meanie.ts  momo.ts  resolver.ts  run-traders.ts  vibes.ts
contracts/: Cargo.toml  Odra.toml
contracts/src/: factory.rs  lib.rs  market.rs  stake.rs  stake_tests.rs  susd.rs  tests.rs
docs/: ODRA_NOTES.md
examples/: README.md  join-sooth.ts
lib/: casper.ts  market-reader.ts  package.json  sdk.ts  sooth.ts  x402-client.ts  x402.ts
mcp/: README.md  package.json  server.ts  tsconfig.json
scripts/: balances.ts  claim-now.ts  consolidate.ts  create-flagship.sh  create-market.ts  create-markets.ts  deploy.ts  fund-and-seed.ts  fund-susd.ts  inspect-contract.ts  keygen.ts  market-events.ts  refill.ts  run-jury.ts  seed-market.ts  send-cspr.ts  smoke.ts  susd-balances.ts  test-x402-pay.ts  tx-effects.ts
services/feed/: package.json
services/feed/src/: index.ts
services/oracle/: package.json
services/oracle/src/: index.ts
web/: next.config.ts  package.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/agents/: page.tsx
web/src/app/oracle/: page.tsx
web/src/components/: chrome.tsx  hero.tsx  panels.tsx  ui.tsx
web/src/lib/: shared.ts
web/src/server/: balances.ts  chain.ts
(+5 files in other folders)
