[package]
edition = "2021"
name = "sooth_contracts"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.0", default-features = false }
odra-modules = { version = "2.8.0", default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.0", default-features = false }

[build-dependencies]
odra-build = { version = "2.8.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.0", default-features = false }

[[bin]]
name = "sooth_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "sooth_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
